Correct nav, sidebar, and footer z-index

--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -13,6 +13,7 @@
 
 /* Footer General */
 footer {
+    z-index: 0;
     overflow: hidden;
 }
 
