--- a/public/assets/css/sidebar-workspace.css
+++ b/public/assets/css/sidebar-workspace.css
@@ -20,7 +20,7 @@ main {
 
 /* Sidebar Styles */
 #sidebarMenu {
-    z-index: 0;
+    z-index: 1;
     position: fixed;
     top: 0;
     bottom: 0;
